--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -58,8 +58,6 @@
 		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	
-
 </head>
 
 <body>
@@ -77,13 +75,12 @@
 		<!-- Navigation -->
 		<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<button type="button" class="navbar-toggle closed" aria-controls="navbar" style="background-color:#d0d0d0;">
 					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
+					<span class="icon-bar top-bar"></span>
+					<span class="icon-bar middle-bar"></span>
+					<span class="icon-bar bottom-bar"></span>
 				</button>
-
 				<a class="navbar-brand" href="https://www.hyperion-project.org?pk_campaign=WebUI&pk_kwd=mainlogo" target="_blank"><img src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!" height="55"></a>
 				<a class="navbar-brand" href="/"><img src="img/hyperion/hyperionlostconnection.png" alt="Redefine ambient light!" style="display:none;"></a>
 
@@ -92,17 +89,17 @@
 
 			<ul class="nav navbar-top-links navbar-right">
 				<li class="dropdown" id="btn_setlang">
-					<a href="#">		
+					<a>		
 						<i class="fa fa-globe fa-fw"></i>
 					</a>
 				</li>
 				<li class="dropdown" id="btn_setaccess">
-					<a href="#">		
+					<a>		
 						<i class="fa fa-key fa-fw"></i>
 					</a>
 				</li>
 				<li class="dropdown" id="btn_open_ledsim">
-					<a href="#">		
+					<a>		
 						<i class="fa fa-television fa-fw"></i>
 					</a>
 				</li>
@@ -113,7 +110,7 @@
 					</a>
 					<ul class="dropdown-menu dropdown-alerts">
 						<li id="btn_wizard_byteorder">
-							<a href="#">
+							<a>
 								<div>
 									<i class="fa fa-magic fa-fw"></i>
 									<span data-i18n="wiz_rgb_title"></span>
@@ -122,9 +119,10 @@
 						</li>
 						<li class="divider"></li>
 						<li id="btn_wizard_colorcalibration">
-							<a href="#">
+							<a>
 								<div>
-									<i class="fa fa-magic fa-fw"></i> Color Calibration Wizard
+									<i class="fa fa-magic fa-fw"></i>
+									<span data-i18n="wiz_cc_title"></span>
 								</div>
 							</a>
 						</li>
@@ -138,28 +136,29 @@
 			<div id="main-nav" class="navbar-default sidebar" role="navigation">
 				<div class="sidebar-nav navbar-collapse">
 					<ul class="nav" id="side-menu">
-						<li> <a class="active" id="load_dashboard"><i class="fa fa-dashboard fa-fw"></i><span  data-i18n="main_menu_dashboard_token">Dashboard</span></a> </li>
+						<li> <a class="inactive mnava" href="#dashboard"><i class="fa fa-dashboard fa-fw"></i><span  data-i18n="main_menu_dashboard_token">Dashboard</span></a> </li>
 						<li>
 							<a class="inactive"><i class="fa fa-cog fa-fw"></i><span  data-i18n="main_menu_configuration_token">Configuration</span><span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level">
-								<li> <a class="inactive" id="load_confGeneral"><i class="fa fa-wrench fa-fw"></i><span  data-i18n="main_menu_general_conf_token">General</span></a> </li>
-								<li> <a class="inactive" id="load_confLeds"><i class="fa fa-lightbulb-o fa-fw"></i><span  data-i18n="main_menu_leds_conf_token">LED Hardware</span></a> </li>
-								<li> <a class="inactive" id="load_confGrabber"><i class="fa fa-camera fa-fw"></i><span  data-i18n="main_menu_grabber_conf_token">Capturing Hardware</span></a> </li>
-								<li> <a class="inactive" id="load_confEffects"><i class="fa fa-spinner fa-fw"></i><span  data-i18n="main_menu_effect_conf_token">Effects</span></a> </li>
-								<li> <a class="inactive" id="load_confColors"><i class="fa fa-photo fa-fw"></i><span  data-i18n="main_menu_colors_conf_token">Image Processing</span></a> </li>
-								<li> <a class="inactive" id="load_confKodi"><i class="fa fa-play-circle-o fa-fw"></i><span  data-i18n="main_menu_kodiwatch_token">Kodi Watch</span></a> </li>
-								<li> <a class="inactive" id="load_confNetwork"><i class="fa fa-sitemap fa-fw"></i><span  data-i18n="main_menu_network_conf_token">Network</span></a> </li>
+								<li> <a class="inactive mnava" href="#conf_general"><i class="fa fa-wrench fa-fw"></i><span  data-i18n="main_menu_general_conf_token">General</span></a> </li>
+								<li> <a class="inactive mnava" href="#conf_leds"><i class="fa fa-lightbulb-o fa-fw"></i><span  data-i18n="main_menu_leds_conf_token">LED Hardware</span></a> </li>
+								<li> <a class="inactive mnava" href="#conf_grabber"><i class="fa fa-camera fa-fw"></i><span  data-i18n="main_menu_grabber_conf_token">Capturing Hardware</span></a> </li>
+								<li> <a class="inactive mnava" href="#conf_effect"><i class="fa fa-spinner fa-fw"></i><span  data-i18n="main_menu_effect_conf_token">Effects</span></a> </li>
+								<li> <a class="inactive mnava" href="#conf_colors"><i class="fa fa-photo fa-fw"></i><span  data-i18n="main_menu_colors_conf_token">Image Processing</span></a> </li>
+								<li> <a class="inactive mnava" href="#conf_kodi"><i class="fa fa-play-circle-o fa-fw"></i><span  data-i18n="main_menu_kodiwatch_token">Kodi Watch</span></a> </li>
+								<li> <a class="inactive mnava" href="#conf_network"><i class="fa fa-sitemap fa-fw"></i><span  data-i18n="main_menu_network_conf_token">Network</span></a> </li>
 							</ul>
 						</li>
-						<li> <a class="inactive" id="load_remote"><i class="fa fa-wifi fa-fw"></i><span  data-i18n="main_menu_remotecontrol_token">Remote Control</span></a>	</li>
-						<li> <a class="inactive" id="load_effectsconfig"><i class="fa fa-cogs fa-fw"></i><span  data-i18n="main_menu_effectsconfigurator_token">Effects Configurator</span></a>	</li>
-						<li> <a class="inactive" id="load_support"><i class="fa fa-info fa-fw"></i><span  data-i18n="main_menu_support_token">Support</span></a> </li>
+						<li> <a class="inactive mnava" href="#remote"><i class="fa fa-wifi fa-fw"></i><span  data-i18n="main_menu_remotecontrol_token">Remote Control</span></a>	</li>
+						<li> <a class="inactive mnava" href="#effects_configurator"><i class="fa fa-cogs fa-fw"></i><span  data-i18n="main_menu_effectsconfigurator_token">Effects Configurator</span></a>	</li>
+						<li> <a class="inactive mnava" href="#support"><i class="fa fa-info fa-fw"></i><span  data-i18n="main_menu_support_token">Support</span></a> </li>
 						<li>
 							<a class="inactive"><i class="fa fa-industry fa-fw"></i><span  data-i18n="main_menu_system_token">System</span><span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level">
-								<li> <a class="inactive" id="load_webconfig"><i class="fa fa-wrench fa-fw"></i><span  data-i18n="main_menu_webconfig_token">Webconfiguration</span></a> </li>
-								<li> <a class="inactive" id="load_logging"><i class="fa fa-reorder fa-fw"></i><span  data-i18n="main_menu_logging_token">Log</span></a> </li>
-								<li> <a class="inactive" id="load_update"><i class="fa fa-download fa-fw"></i><span  data-i18n="main_menu_update_token">Update</span></a> </li>
+								<li> <a class="inactive mnava" href="#conf_webconfig" id="load_webconfig"><i class="fa fa-wrench fa-fw"></i><span  data-i18n="main_menu_webconfig_token">Webconfiguration</span></a> </li>
+								<li> <a class="inactive mnava" href="#conf_logging"><i class="fa fa-reorder fa-fw"></i><span  data-i18n="main_menu_logging_token">Log</span></a> </li>
+								<li> <a class="inactive mnava" href="#update"><i class="fa fa-download fa-fw"></i><span  data-i18n="main_menu_update_token">Update</span></a> </li>
+								<li> <a class="inactive mnava" href="#about"><i class="fa fa-info-circle fa-fw"></i><span  data-i18n="main_menu_about_token">Update</span></a> </li>
 							</ul>
 						</li>
 					</ul>
@@ -205,12 +204,18 @@
 			<div class="modal-content">
 				<div id="wiz_header" class="modal-header"></div>
 				<div id="wizp1">
-					<div id="wizp1_body" class="modal-body" style="text-align:center"></div>
+					<div class="modal-body" style="text-align:center">
+						<img src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!" style="margin-bottom:15px">
+						<div id="wizp1_body" ></div>
+					</div>
 					<div id="wizp1_footer" class="modal-footer" style="text-align:center"></div>
 				</div>
 				<div id="wizp2" style="display:none">
 					<center>
-						<div id="wizp2_body" class="modal-body"></div>
+						<div class="modal-body">
+							<img src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!" style="margin-bottom:15px">
+							<div id="wizp2_body"></div>
+						</div>
 					</center>
 					<div id="wizp2_footer" class="modal-footer" style="text-align:center"></div>
 				</div>
@@ -221,7 +226,7 @@
 	<!-- ledsimDialog -->
 	<div id="ledsim_dialog" style="display:none; z-index:9998">
 		<div data-role="body" style="padding:0px;">
-			<p id="ledsim_text" data-i18n="main_ledsim_text" style="font-weight:bold; margin: 10px 15px 0px 15px">Live visualization of led colors and if available the current picture of your capture device</p>
+			<div id="ledsim_text"></div>
 			<div id="leds_canvas"></div>
 		</div>
 		<div data-role="footer" style="text-align:center">
