--- a/assets/webconfig/content/effects_configurator.html
+++ b/assets/webconfig/content/effects_configurator.html
@@ -1,10 +1,8 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h2 class="page-header"><i class="fa fa-cogs fa-fw"></i><span  data-i18n="main_menu_effectsconfigurator_token">Effects Configurator</span></h2> 
-			<div class="introd">
-				<h4  data-i18n="effectsconfigurator_label_intro">Create out of the base effects new effects that are tuned to your liking. Depending on Effect there are options like color, speed, direction and more available.</h4>
-			<hr />
+			<h3 class="page-header"><i class="fa fa-cogs fa-fw"></i><span  data-i18n="main_menu_effectsconfigurator_token">Effects Configurator</span></h3> 
+			<div id="intro_effc">
 			</div>
 			<div class="row">
 			<div class="col-lg-6">
@@ -28,7 +26,7 @@
 						<button  class="btn btn-warning" id='btn_start_test' data-i18n="effectsconfigurator_button_starttest">Start Effecttest</button>
 						<button  class="btn btn-warning" id='btn_stop_test' data-i18n="effectsconfigurator_button_stoptest">Stop Effecttest</button>
 						<button  class="btn btn-danger" id='btn_cont_test' data-i18n="effectsconfigurator_button_conttest">Toggle continuous testing</button>
-						<button  class="btn btn-primary pull-right" id='btn_write' data-i18n="effectsconfigurator_button_saveeffect">Save Effect</button>
+						<button  class="btn btn-primary" id='btn_write' data-i18n="effectsconfigurator_button_saveeffect">Save Effect</button>
 					</div>
 				</div>
 			</div>
@@ -37,7 +35,7 @@
 					<div class="panel-heading">
 						<label for="effectsdellist"  data-i18n="effectsconfigurator_label_deleffect">Delete Effect:</label>
 						<select id="effectsdellist" class="form-control" style="color:black;width:auto;margin-left:10px;display:inline-block" />
-						<button  class="btn btn-primary pull-right" id='btn_delete' data-i18n="effectsconfigurator_button_deleffect">Delete Effect</button>
+						<button  class="btn btn-primary" id='btn_delete' data-i18n="effectsconfigurator_button_deleffect">Delete Effect</button>
 					</div>
 				</div>
 			</div>
