--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -126,6 +126,15 @@
 								</div>
 							</a>
 						</li>
+						<li class="divider"></li>
+						<li id="btn_wizard_philipshue">
+							<a>
+								<div>
+									<i class="fa fa-magic fa-fw"></i>
+									<span data-i18n="wiz_hue_title"></span>
+								</div>
+							</a>
+						</li>
 					</ul>
 					<!-- /.dropdown-alerts -->
 				</li>
@@ -218,6 +227,15 @@
 						</div>
 					</center>
 					<div id="wizp2_footer" class="modal-footer" style="text-align:center"></div>
+				</div>
+				<div id="wizp3" style="display:none">
+					<center>
+						<div class="modal-body">
+							<img src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!" style="margin-bottom:15px">
+							<div id="wizp3_body"></div>
+						</div>
+					</center>
+					<div id="wizp3_footer" class="modal-footer" style="text-align:center"></div>
 				</div>
 			</div>
 		</div>
