--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -10,7 +10,7 @@
 <script type="text/javascript">
 	performTranslation();
 	
-	var si = parsedServerInfoJSON.info.hyperion[0];
+	var si = serverInfo.info.hyperion[0];
 	var libs = {"Bootstrap 3" : "http://getbootstrap.com/", "JQuery" : "https://jquery.com/", "Bootstrap Colorpicker" : "https://itsjavi.com/bootstrap-colorpicker/", "JSON-Editor" : "http://jeremydorn.com/json-editor/", "jQuery.i18n" : "https://github.com/wikimedia/jquery.i18n", "metisMenu" : "http://mm.onokumus.com/index.html", "download.js" : "http://danml.com/download.html", "gijgo" : "http://gijgo.com/"};
 	var libh = "";
 	var lang = [];
